--- a/requirements.txt
+++ b/requirements.txt
@@ -1,183 +1,14 @@
-abstract-rendering==0.5.1
-alabaster==0.7.6
-alembic==0.8.3
-anaconda-client==1.1.0
-appnope==0.1.0
-appscript==1.0.1
-argcomplete==1.0.0
-astropy==1.0.5
-aws==0.2.5
-Babel==2.1.1
-backports.ssl-match-hostname==3.4.0.2
-bcrypt==2.0.0
-beautifulsoup4==4.4.1
-binaryornot==0.4.0
-bitarray==0.8.1
-blaze==0.8.3
-blinker==1.4
-bokeh==0.10.0
-boto==2.38.0
-Bottleneck==1.0.0
-cdecimal==2.3
-cffi==1.2.1
-chardet==2.3.0
-click==6.2
-clyent==0.4.0
-colorama==0.3.3
-conda==3.19.3
-conda-build==1.18.1
-conda-env==2.4.5
-configobj==5.0.6
-cookiecutter==1.3.0
-coursera==0.0.3
-cryptography==1.0.2
-cssmin==0.2.0
-Cython==0.23.4
-cytoolz==0.7.4
-datashape==0.4.7
-decorator==4.0.4
-docutils==0.12
-ecdsa==0.13
-enum34==1.0.4
-evernote==1.25.1
-Fabric==1.10.2
-fastcache==1.0.2
-Flask==0.10.1
-Flask-Assets==0.11
-Flask-Bcrypt==0.7.1
-Flask-Cache==0.13.1
-Flask-Cors==2.1.2
-Flask-DebugToolbar==0.10.0
-Flask-Login==0.3.2
-Flask-Mail==0.9.1
-Flask-Migrate==1.8.0
+click==6.6
+Flask==0.11.1
 Flask-Script==2.0.5
+Flask-SocketIO==2.5
 Flask-SQLAlchemy==2.1
-Flask-Testing==0.4.2
-Flask-User==0.6.8
-Flask-WTF==0.12
-funcsigs==0.4
-future==0.15.2
-geeknote==0.2a0
-gevent==1.0.1
-gevent-websocket==0.9.3
-greenlet==0.4.9
-grin==1.2.1
 gunicorn==19.6.0
-h5py==2.5.0
-html2text==2016.1.8
-html5lib==1.0b8
-httplib2==0.9.2
-httpretty==0.8.14
-idna==2.0
-ipaddress==1.0.14
-ipykernel==4.1.1
-ipython==4.0.0
-ipython-genutils==0.1.0
-ipywidgets==4.1.0
 itsdangerous==0.24
-jdcal==1.0
-jedi==0.9.0
 Jinja2==2.8
-jsmin==2.2.1
-jsonschema==2.4.0
-jupyter==1.0.0
-jupyter-client==4.1.1
-jupyter-console==4.0.3
-jupyter-core==4.0.6
-llvmlite==0.7.0+3.g1ec568f
-lxml==3.4.4
-Mako==1.0.3
-Markdown==2.6.2
-markdown2==2.3.0
 MarkupSafe==0.23
-matplotlib==1.4.3
-mistune==0.7.1
-mongoengine==0.10.6
-multipledispatch==0.4.8
-nbconvert==4.0.0
-nbformat==4.0.1
-networkx==1.10
-nltk==3.1
-nose==1.3.7
-notebook==4.0.6
-numba==0.21.0
-numexpr==2.4.4
-numpy==1.10.1
-oauth2==1.9.0.post1
-odo==0.3.4
-openpyxl==2.2.6
-pandas==0.17.0
-paramiko==1.16.0
-passlib==1.6.5
-path.py==0.0.0
-patsy==0.4.0
-pep8==1.6.2
-pexpect==3.3
-pickleshare==0.5
-Pillow==3.0.0
-ply==3.8
-powerline-status==2.3
-prettytable==0.7.2
-psutil==3.2.2
-psycopg2==2.6.1
-ptyprocess==0.5
-py==1.4.30
-pyasn1==0.1.9
-PyAudio==0.2.7
-pycosat==0.6.1
-pycparser==2.14
-pycrypto==2.6.1
-pycurl==7.19.5.1
-pyflakes==1.0.0
-Pygments==2.1.3
-pymongo==3.2
-pyOpenSSL==0.15.1
-pyparsing==2.0.3
-pytest==2.8.1
-python-bcrypt==0.3.1
-python-dateutil==2.4.2
-python-editor==0.4
-pytz==2015.6
-PyYAML==3.11
-pyzmq==14.7.0
-qtconsole==4.1.0
-redis==2.10.3
-requests==2.7.0
-rope==0.9.4
-ruamel.base==1.0.0
-ruamel.ordereddict==0.4.9
-ruamel.yaml==0.10.12
-scikit-image==0.11.3
-scikit-learn==0.16.1
-scipy==0.16.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
+python-engineio==0.9.2
+python-socketio==1.4.1
 six==1.10.0
-snowballstemmer==1.2.0
-sockjs-tornado==1.0.1
-Sphinx==1.3.1
-sphinx-rtd-theme==0.1.7
-spyder==2.3.7
-SQLAlchemy==1.0.12
-statsmodels==0.6.1
-svgwrite==1.1.6
-sympy==0.7.6.1
-tables==3.2.2
-terminado==0.5
-thrift==0.9.3
-toolz==0.7.4
-tornado==4.2.1
-traitlets==4.0.0
-ujson==1.33
-unicodecsv==0.14.1
-urllib3==1.12
-virtualenv==13.1.2
-webassets==0.11.1
-Werkzeug==0.11.4
-whichcraft==0.1.1
-WTForms==2.1
-xlrd==0.9.4
-XlsxWriter==0.7.7
-xlwings==0.4.1
-xlwt==1.0.0
+SQLAlchemy==1.0.13
+Werkzeug==0.11.10
