--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.10.1",
-    "babel-eslint": "^6.0.5",
+    "babel-eslint": "^6.1.0",
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.13.0",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
