--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-environments": "^0.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-jsx": "^2.0.1",
-    "gulp-livereload": "^3.8.1"
+    "gulp-livereload": "^3.8.1",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
